<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        app:title="Search User"
        app:titleTextColor="@android:color/white" />

    <EditText
        android:id="@+id/etSearchUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Search GitHub username"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:imeOptions="actionSearch"
        android:padding="16dp"
        android:layout_margin="20dp"
        android:background="@drawable/bg_search"
        android:singleLine="true"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>